--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
     environment:
-      - DB_HOST:db
-      - DB_NAME=debdb
+      - DB_HOST=db
+      - DB_NAME=devdb
       - DB_USER=devuser
       - DB_PASS=changeme
     depends_on:
